# eidas-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.json
crates/ades/: Cargo.toml
crates/ades/examples/: dump_cades_bb.rs  dump_pades_bb.rs  dump_pades_bt.rs
crates/ades/src/: certificate.rs  cms.rs  digest.rs  error.rs  levels.rs  lib.rs  signer.rs
crates/ades/src/cades/: mod.rs  sign.rs  sign_t.rs
crates/ades/src/ocsp/: client.rs  mod.rs
crates/ades/src/pades/: mod.rs  sign.rs  sign_t.rs
crates/ades/src/pkcs11/: mod.rs  signer.rs
crates/ades/src/tsp/: client.rs  mod.rs
crates/ades/src/xades/: mod.rs  sign.rs  sign_t.rs
crates/ades/tests/: cades_bb.rs  cades_bt.rs  ocsp_client.rs  pades_bb.rs  pades_bt.rs  pkcs11_signer.rs  tsp_client.rs  xades_bb.rs  xades_bt.rs
crates/dss-client/: Cargo.toml
crates/dss-client/src/: main.rs  no_trust_policy.xml
