[package]
name = "ades"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AdES digital signatures (CAdES, PAdES) for the eIDAS 2.0 ecosystem"
keywords = ["eidas", "cades", "pades", "digital-signature", "cms"]
categories = ["cryptography", "encoding"]

[features]
default = ["cades", "pades", "soft"]
cades = []
pades = ["cades"]
soft = []
tsp = ["dep:ureq"]
pkcs11 = ["dep:cryptoki"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
# RustCrypto
rsa = { version = "0.9", features = ["sha2"] }
p256 = "0.13"
sha2 = "0.10"
x509-cert = { version = "0.2", features = ["builder", "hazmat"] }
cms = "0.2"
der = { version = "0.7", features = ["std"] }
spki = "0.7"
pem-rfc7468 = "0.7"
const-oid = "0.9"

# PDF para PAdES
lopdf = "0.32"

# Errores
thiserror.workspace = true
signature = "2"

# RNG para generación de claves
rand_core = { version = "0.6", features = ["getrandom"] }

# Opcionales
ureq = { version = "2", features = ["json"], optional = true }
cryptoki = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
hex.workspace = true
