[package]
name = "dss-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "CLI para validar firmas AdES contra el validador DSS de la CE"

[[bin]]
name = "dss-client"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde_json = "1"
base64 = "0.22"
